# Divines

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: build-ios.yml  deploy-web.yml
.trae/skills/agent-development/: SKILL.md
.trae/skills/anthropic-skills/: SKILL.md
.trae/skills/best-skills/: SKILL.md
.trae/skills/divines-project/: SKILL.md
.trae/skills/ecc/: SKILL.md
.trae/skills/horosa-project/: SKILL.md
.trae/skills/karpathy-guidelines/: SKILL.md
.trae/skills/rust-fullstack-dev/: SKILL.md
.trae/skills/superpowers/: SKILL.md
crates/divines-calc/: Cargo.toml
crates/divines-calc/src/: lib.rs  remaining.rs
crates/divines-calc/src/astrology/: mod.rs
crates/divines-calc/src/bazi/: data.rs  ganzhi_relative.rs  gods.rs  gong12.rs  mod.rs  season.rs  tiaohou.rs
crates/divines-calc/src/bazi/data/: bazicompose.json  bazipithy.json  gods.json  gong12.json  wuxing_phase.json
crates/divines-calc/src/ephem/: mod.rs
crates/divines-calc/src/gua/: data.rs  mod.rs
crates/divines-calc/src/jieqi/: mod.rs
crates/divines-calc/src/liureng/: mod.rs
crates/divines-calc/src/liuyao/: mod.rs
crates/divines-calc/src/predict/: mod.rs
crates/divines-calc/src/qizheng/: mod.rs
crates/divines-calc/src/sanshi/: mod.rs
crates/divines-calc/src/sxwnl/: data.rs  eclipse.rs  lunar.rs  mod.rs  syzygy.rs  vsop87.rs
crates/divines-calc/src/vedic/: mod.rs
crates/divines-calc/src/ziwei/: data.rs  mod.rs
crates/divines-core/: Cargo.toml
crates/divines-core/src/: ai.rs  astrology.rs  bazi.rs  calendar.rs  chart.rs  error.rs  lib.rs  liuyao.rs  qizheng.rs  sanshi.rs  user.rs  ziwei.rs
crates/divines-server/: Cargo.toml
crates/divines-server/src/: main.rs
crates/divines-server/src/api/: ai.rs  astro.rs  bazi.rs  calendar.rs  liureng.rs  liuyao.rs  mod.rs  sanshi.rs  user.rs  ziwei.rs
crates/divines-server/src/middleware/: auth.rs  mod.rs
crates/divines-web/: Cargo.toml  Dioxus.toml  Info.plist
crates/divines-web/assets/: styles.css
crates/divines-web/src/: main.rs
crates/divines-web/src/components/: mod.rs
crates/divines-web/src/components/aianalysis/: mod.rs
crates/divines-web/src/components/astro/: mod.rs
crates/divines-web/src/components/bazi/: mod.rs
crates/divines-web/src/components/calendar/: mod.rs
crates/divines-web/src/components/common/: mod.rs
crates/divines-web/src/components/fengshui/: mod.rs
crates/divines-web/src/components/liuyao/: mod.rs
crates/divines-web/src/components/planetarium/: mod.rs
crates/divines-web/src/components/qizheng/: mod.rs
crates/divines-web/src/components/sanshi/: mod.rs
crates/divines-web/src/components/ziwei/: mod.rs
crates/divines-web/src/constants/: mod.rs
crates/divines-web/src/layouts/: mod.rs
crates/divines-web/src/pages/: home.rs  mod.rs
crates/divines-web/src/services/: mod.rs
crates/divines-web/src/utils/: mod.rs
crates/horosa-calc/: Cargo.toml
crates/horosa-calc/src/: lib.rs  remaining.rs
crates/horosa-calc/src/astrology/: mod.rs
crates/horosa-calc/src/bazi/: data.rs  ganzhi_relative.rs  gods.rs  gong12.rs  mod.rs  season.rs  tiaohou.rs
crates/horosa-calc/src/bazi/data/: ganzhi_relative.json  nayin.json  season.json  tiaohou.json
crates/horosa-calc/src/ephem/: mod.rs
crates/horosa-calc/src/gua/: data.rs  mod.rs
crates/horosa-calc/src/jieqi/: mod.rs
crates/horosa-calc/src/liureng/: mod.rs
crates/horosa-calc/src/liuyao/: mod.rs
crates/horosa-calc/src/predict/: mod.rs
crates/horosa-calc/src/qizheng/: mod.rs
crates/horosa-calc/src/sanshi/: mod.rs
crates/horosa-calc/src/sxwnl/: calendar.rs  julian.rs  lunar.rs  mod.rs  syzygy.rs
crates/horosa-calc/src/vedic/: mod.rs
crates/horosa-calc/src/ziwei/: data.rs  mod.rs
crates/horosa-core/: Cargo.toml
crates/horosa-core/src/: ai.rs  astrology.rs  bazi.rs  calendar.rs  chart.rs  error.rs  lib.rs  liuyao.rs  qizheng.rs  sanshi.rs  user.rs  ziwei.rs
crates/horosa-server/: Cargo.toml
crates/horosa-server/src/: main.rs
crates/horosa-server/src/api/: ai.rs  astro.rs  bazi.rs  calendar.rs  liureng.rs  liuyao.rs  mod.rs  sanshi.rs  user.rs  ziwei.rs
crates/horosa-server/src/middleware/: auth.rs  mod.rs
crates/horosa-web/: Cargo.toml  Dioxus.toml
crates/horosa-web/assets/: styles.css
crates/horosa-web/src/: main.rs
crates/horosa-web/src/components/: mod.rs
crates/horosa-web/src/components/aianalysis/: mod.rs
crates/horosa-web/src/components/astro/: mod.rs
crates/horosa-web/src/components/bazi/: mod.rs
crates/horosa-web/src/components/calendar/: mod.rs
crates/horosa-web/src/components/common/: mod.rs
crates/horosa-web/src/components/fengshui/: mod.rs
crates/horosa-web/src/components/liuyao/: mod.rs
crates/horosa-web/src/components/planetarium/: mod.rs
crates/horosa-web/src/components/qizheng/: mod.rs
crates/horosa-web/src/components/sanshi/: mod.rs
crates/horosa-web/src/components/ziwei/: mod.rs
crates/horosa-web/src/constants/: mod.rs
crates/horosa-web/src/layouts/: mod.rs
crates/horosa-web/src/pages/: home.rs  mod.rs
crates/horosa-web/src/services/: mod.rs
crates/horosa-web/src/utils/: mod.rs
test-proc/: Cargo.toml
test-proc/src/: main.rs
