[workspace]
resolver = "2"
members = [
    "crates/divines-core",
    "crates/divines-calc",
    "crates/divines-server",
    "crates/divines-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Divines"]
description = "Divines - 纯 Rust 私域工作站"

[workspace.dependencies]
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# 异步运行时
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# 数据库 / 本地存储
sled = "0.34"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
sha2 = "0.10"
flate2 = "1"
zip = "2"

# Dioxus 前端
dioxus = { version = "0.7.9", default-features = false }
dioxus-router = "0.7.9"
dioxus-fullstack = "0.7.9"
dioxus-web = "0.7.9"
dioxus-desktop = "0.7.9"
dioxus-logger = "0.7.9"
dioxus-signals = "0.7.9"

# 内部 crate
divines-core = { path = "crates/divines-core" }
divines-calc = { path = "crates/divines-calc" }
divines-server = { path = "crates/divines-server" }
divines-web = { path = "crates/divines-web" }
