[package]
name = "divines-calc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Divines - 计算引擎（占星、八字、紫微、三式、七政、节气、印度占星等）"

[dependencies]
divines-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
time.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
rand = "0.8"

# Swiss Ephemeris C FFI binding
# swe-rs = "0.3"  # 需要编译时链接 Swiss Ephemeris C 库