[package]
name = "divines-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Divines - Dioxus 前端 Web 应用"

[dependencies]
divines-core.workspace = true
divines-calc.workspace = true

dioxus = { workspace = true, features = ["router", "launch", "signals", "html", "macro", "hooks"] }
dioxus-router.workspace = true
dioxus-web = { workspace = true, optional = true }
dioxus-desktop = { workspace = true, optional = true }
dioxus-logger.workspace = true
dioxus-signals.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest = { workspace = true, optional = true, default-features = false, features = ["json"] }
tracing.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
js-sys = { version = "0.3", optional = true }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["web"]
web = ["dioxus/web", "dioxus-web", "wasm-bindgen", "web-sys", "js-sys"]
desktop = ["dioxus/desktop", "dioxus-desktop", "reqwest"]
mobile = ["dioxus/mobile", "dioxus-desktop"]