[package]
name = "horosa-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "星阙 Horosa - 后端 API 服务器（Axum）"

[dependencies]
horosa-core.workspace = true
horosa-calc.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sqlx.workspace = true
reqwest.workspace = true